feat: implement auth via email codes
