# backend/src/auth/dto/email-code-request.dto.ts
@@ -1,0 +1,6 @@
+import { IsEmail } from 'class-validator';
+
+export class EmailCodeRequestDto {
+  @IsEmail()
+  email!: string;
+}
